@@ -1,3 +1,7 @@
+2005-09-13 Karsten Dambekalns <karsten@typo3.org>
+
+	* Fixed the page is being generated page refreshing to the wrong page when query parameters are used.
+
 2005-08-22 Martin Kutschker <martin.t.kutschker@blackbox.net>
 
 	* Fixed bug #24: Modified the JS layer code so that GMENU_LAYERS work with Opera (3.8 patch port by Michael Stucki)
